compiler/testData/diagnostics/tests/suppress/oneWarning/suppressOnDeclarationItself.fir.kt
class A {
    @Suppress(<!ERROR_SUPPRESSION!>"NOTHING_TO_OVERRIDE"<!>)
    override fun foo() {}
}

